<resources>
    <string name="app_name">My Application</string>
    <string name="login_button">Login</string>
    <string name="signUpWarning">Don\'t have an account?Sign In!</string>
    <string name="LoginText">Log In:</string>
    <string name="play_button">Play</string>
    <string name="next">Next Question</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="stats">Stats</string>
    <string name="create_quiz">Create quiz</string>
    <string name="quiz_settings">Quiz Settings</string>
    <string name="number_of_questions">Number Of Questions:</string>
    <string name="main_menu"> main menu </string>
    <string name="enter_title">Enter your quiz title</string>
    <string name="enter_description">Enter a description for your quiz (optional)</string>
    <string name="question_text">Question Text:</string>
    <string name="answers">Answers:</string>
    <string name="please_enter_in_all_fields">Please enter in all fields</string>
    <string name="thank_you_for_creating_this_quiz">Thank You For Creating this Quiz!</string>
</resources>