<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.AppCompat.Button.Borderless"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color">

    <TextView
        android:id="@+id/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.05"
        android:padding="12dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/quiz_settings"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:max="9"
        android:progress="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/NOQuestions"
        app:layout_constraintTop_toBottomOf="@+id/TitleText"
        app:layout_constraintVertical_bias="0.235" />

    <TextView
        android:id="@+id/NOQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.05"
        android:padding="12dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/number_of_questions"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleText"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/seekBarValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:text=""
        android:textColor="@color/white_gray_for_buttons"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/main_menu"
        android:textColor="@color/white_gray_for_buttons"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:autofillHints="Quiz Title"
        android:background="@drawable/rounded_button"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        android:letterSpacing="0.03"
        android:maxLines="4"
        android:minLines="2"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textColorHint="@color/white_gray_for_buttons"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="400dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:autofillHints="Quiz Title"
        android:background="@drawable/rounded_button"
        android:hint="@string/enter_title"
        android:inputType="text"
        android:letterSpacing="0.05"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textColorHint="@color/white_gray_for_buttons"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NOQuestions" />

    <Button
        android:id="@+id/createQuizButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:text="@string/create_quiz"
        android:textColor="@color/white_gray_for_buttons"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />

</androidx.constraintlayout.widget.ConstraintLayout>