<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.AppCompat.Button.Borderless"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color">

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/please_enter_in_all_fields"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:letterSpacing="0.05"
        android:padding="12dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="1/10"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextQuestionButton" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.05"
        android:padding="12dp"
        android:layout_marginTop="4dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/question_text"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorText"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/AnswersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:letterSpacing="0.05"
        android:padding="12dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/answers"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextEdit" />

    <EditText
        android:id="@+id/questionTextEdit"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
        android:autofillHints="Quiz Text"
        android:background="@drawable/rounded_button"

        android:inputType="textMultiLine"
        android:letterSpacing="0.05"
        android:maxLength="255"
        android:maxLines="4"
        android:minLines="2"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textColorHint="@color/white_gray_for_buttons"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionText"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/option1Text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:autofillHints="Quiz Title"
        android:background="@drawable/rounded_button"
        android:inputType="text"
        android:letterSpacing="0.05"
        android:maxLength="50"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textColorHint="@color/white_gray_for_buttons"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnswersText"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/option2Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="23dp"
        android:autofillHints="Quiz Title"
        android:background="@drawable/rounded_button"
        android:inputType="text"
        android:letterSpacing="0.05"
        android:maxLength="50"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textColorHint="@color/white_gray_for_buttons"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option1Text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/option3Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="23dp"
        android:autofillHints="Quiz Title"
        android:background="@drawable/rounded_button"
        android:inputType="text"
        android:letterSpacing="0.05"
        android:maxLength="50"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textColorHint="@color/white_gray_for_buttons"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option2Text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/option4Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="23dp"
        android:autofillHints="Quiz Title"
        android:background="@drawable/rounded_button"
        android:inputType="text"
        android:letterSpacing="0.05"
        android:maxLength="50"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/white_gray_for_buttons"
        android:textColorHint="@color/white_gray_for_buttons"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option3Text"
        tools:ignore="LabelFor" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="100dp"
        android:layout_height="271dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/questionNumberText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/option3Text"
        app:layout_constraintTop_toBottomOf="@+id/AnswersText"
        app:layout_constraintVertical_bias="0.0">


        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/custom_radio_button"
            android:button="@drawable/rounded_button"
            android:buttonTint="@color/white_gray_for_buttons"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text=""
            android:textColor="@color/white_gray_for_buttons"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.473" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/custom_radio_button"
            android:button="@drawable/rounded_button"
            android:buttonTint="@color/white_gray_for_buttons"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text=""
            android:textColor="@color/white_gray_for_buttons"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/custom_radio_button"
            android:button="@drawable/rounded_button"
            android:buttonTint="@color/white_gray_for_buttons"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text=""
            android:textColor="@color/white_gray_for_buttons"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/custom_radio_button"
            android:button="@drawable/rounded_button"
            android:buttonTint="@color/white_gray_for_buttons"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text=""
            android:textColor="@color/white_gray_for_buttons"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592" />
    </RadioGroup>

    <Button
        android:id="@+id/nextQuestionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/next"
        android:textColor="@color/white_gray_for_buttons"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option4Text" />
</androidx.constraintlayout.widget.ConstraintLayout>